<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App name -->
    <string name="app_name">Weight Tracker</string>

    <!-- Navigation Titles -->
    <string name="nav_login">Login</string>
    <string name="nav_data_grid">Data Grid</string>
    <string name="nav_sms">SMS Alert</string>

    <!-- Shared UI Texts -->
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>

    <!-- Login Screen -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_create_account">Create Account</string>

    <!-- Data Grid Screen (Goal and Entry) -->
    <string name="title_weight_history">Weight History</string>
    <string name="hint_goal_weight">Goal Weight (lbs)</string>
    <string name="button_set_goal">Set Goal</string>
    <string name="section_new_entry">Log New Entry</string>
    <string name="hint_entry_date">Date (MM/dd/yyyy)</string>
    <string name="hint_entry_weight">Weight (lbs)</string>
    <string name="button_submit_entry">Submit Entry</string>


    <string name="header_date_weight_action">Date | Weight | Action</string>

    <!-- SMS Screen -->
    <string name="explanation_sms">Configure permissions to allow SMS alerts when your goal weight is reached.</string>
    <string name="button_grant_sms_permission">Grant SMS Permission</string>
    <string name="status_sms_granted">SMS permission is granted.</string>

    <!-- Dialogs -->
    <string name="dialog_title_edit_entry">Edit Weight Entry</string>
    <string name="dialog_title_confirm_delete">Confirm Deletion</string>
    <string name="dialog_message_confirm_delete">Are you sure you want to delete this weight entry?</string>
    <string name="dialog_delete_confirm">Yes, Delete</string>

    <!-- Toasts/Errors -->
    <string name="error_must_login">Please sign in first to access this screen.</string>
    <string name="error_empty_fields">All fields are required.</string>
    <string name="error_invalid_credentials">Invalid username or password.</string>
    <string name="error_username_taken">Username already exists. Try signing in.</string>
    <string name="error_invalid_weight">Invalid weight format.</string>
    <string name="error_invalid_date_format">Invalid date format. Use MM/dd/yyyy.</string>
    <string name="success_signed_in">Signed in successfully!</string>
    <string name="success_account_created">Account created successfully!</string>
    <string name="success_goal_set">Goal weight set!</string>
    <string name="success_entry_added">Weight entry added.</string>
    <string name="success_entry_updated">Weight entry updated.</string>
    <string name="success_entry_deleted">Weight entry deleted.</string>
    <string name="title_sms_alert">Enable SMS Notifications?\n</string>
    <string name="status_sms_permission_needed">Permission Needed</string>
    <string name="button_sms_granted">Permission Granted</string>
    <string name="status_sms_already_granted">SMS Permission Already Granted</string>
    <string name="button_sms_set_number">SET ALERT PHONE NUMBER</string>
    <string name="text_current_sms_number">Current SMS Target: %1$s</string>


</resources>
